# Panoptes

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: panoptes-bug-report.md  panoptes-feature-request.md
.github/workflows/: cmake-windows.yml
Panoptes-Agent/: CMakeLists.txt
Panoptes-Agent/assets/: resource.rc
Panoptes-Agent/include/: framework.h  inject.hpp  pe.hpp  pipe.hpp  token.hpp  vt_yara.hpp
Panoptes-Agent/src/: agent.cpp  inject.cpp  pe.cpp  pipe.cpp  token.cpp  vt_yara.cpp
Panoptes-DLL/: CMakeLists.txt
Panoptes-DLL/include/: hook.hpp  utils.hpp
Panoptes-DLL/src/: dllmain.cpp  hook.cpp  utils.cpp
Panoptes-Driver/: CMakeLists.txt
Panoptes-Driver/include/: Panoptes-Driver.h  message.h
Panoptes-Driver/src/: Panoptes-Driver.c
assets/: panoptes.config
assets/diagrams/: diagrams.drawio
assets/yara/: eicar_test.yar  rules.pkg
docs/: Doxyfile
installer/Setup/: CMakeLists.txt
installer/Setup/src/: PanoptesSetup.cpp
installer/Wix/: AppComponents.wxs  CMakeLists.txt  Execute.wxs  Folders.wxs  Package.wxs  WixInstaller.wixproj
proto/src/: panoptes.proto
src/container/: CMakeLists.txt
src/container/include/: PanoptesContainer.rc  container_ipc.hpp  resource.h
src/container/src/: container.cpp  ext_server.cpp  service_client.cpp
src/dll/: CMakeLists.txt
src/dll/assets/: resource.rc
src/dll/include/: def.h  framework.h  hook.hpp
src/dll/src/: dllmain.cpp  hook.cpp
src/driver/: CMakeLists.txt
src/driver/driver-files/: Panoptes.inf
src/driver/include/: callbacks.h  driver_constants.h  inject.h  ioctl.h  pano_filter.h  pano_query.h  shellcode.h  structs.h  trace.h
src/driver/src/: callbacks.cpp  driver.cpp  inject.cpp  ioctl.cpp  pano_filter.cpp  pano_query.cpp  trace.cpp
src/driver/temp/: PanoptesDriver.vcxproj  PanoptesDriver.vcxproj.filters
src/extensibility/: CMakeLists.txt
src/extensibility/PanoptesAMSI/: CMakeLists.txt
src/extensibility/PanoptesAMSI/include/: PanoptesAMSI.h
src/extensibility/PanoptesAMSI/src/: amsi-scan.cpp  dllmain.cpp  service_client_amsi.cpp
src/extensibility/PanoptesAMSI/test/: CMakeLists.txt  Test_PanoptesAMSI.cpp
src/extensibility/PanoptesPE/: CMakeLists.txt
src/extensibility/PanoptesPE/include/: PanoptesPE.h
src/extensibility/PanoptesPE/src/: dllmain.cpp  pe-scan.cpp  service_client_pe.cpp
src/extensibility/PanoptesPE/test/: CMakeLists.txt  Test_PanoptesPE.cpp
src/extensibility/PanoptesYara/: CMakeLists.txt
src/extensibility/PanoptesYara/include/: PanoptesYara.h
src/extensibility/PanoptesYara/src/: dllmain.cpp  service_client_yara.cpp  yara-scan.cpp
src/extensibility/PanoptesYara/test/: CMakeLists.txt  Test_PanoptesYara.cpp
src/extensibility/shared/: ExtensibilityCore.h
src/libraries/: CMakeLists.txt
src/libraries/Configuration/: CMakeLists.txt
src/libraries/Configuration/include/: Configuration.hpp
src/libraries/Configuration/src/: Configuration.cpp
src/libraries/ResourceCore/: CMakeLists.txt
src/libraries/ResourceCore/include/: Resource.rc  ResourceCore.h
src/libraries/ResourceCore/src/: ResourceCore.cpp
src/libraries/TrayNotificationsCore/: CMakeLists.txt
src/libraries/TrayNotificationsCore/include/: TrayNotifications.h  resource.h
src/libraries/TrayNotificationsCore/src/: TrayNotifications.cpp  TrayNotifications.rc
src/linter/: CMakeLists.txt
src/linter/include/: PanoptesLinter.h
src/linter/src/: PanoptesLinter.cpp
src/linter/test/: CMakeLists.txt
src/scanner/: CMakeLists.txt
src/scanner/PanoptesScan/: CMakeLists.txt
src/scanner/PanoptesScan/include/: PanoptesScan.rc  resource.h
src/scanner/PanoptesScan/src/: scan.cpp  scanner_ipc.cpp
src/scanner/PanoptesScanCLI/: CMakeLists.txt
src/scanner/PanoptesScanCLI/include/: scanner_ipc.hpp
src/scanner/PanoptesScanCLI/src/: scan_cli.cpp  scanner_ipc.cpp
src/service/: CMakeLists.txt
src/service/include/: PanoptesService.rc  containers.h  database.hpp  driver.h  error_message.h  events.h  grpc.hpp  hash.h  icon_resource.h  mutex.hpp  pano_log.h  panoptes_service.h  service_constants.h  service_ipc.h  utils.h
src/service/src/: container.cpp  containers.cpp  database.cpp  driver.cpp  error_message.cpp  events.cpp  grpc.cpp  hash.cpp  mutex.cpp  pano_log.cpp  service.cpp  utils.cpp
src/testing/: CMakeLists.txt
src/testing/KernelTestHost/: CMakeLists.txt
src/testing/KernelTestHost/include/: panoptes_trace.h
src/testing/KernelTestHost/src/: KernelTestHost.cpp  panoptes_trace.cpp
